# Andromeda

./: Cargo.toml  README.md
.github/workflows/: book.yml  build.yml  release.yml
docs/: book.toml
src/: main.rs
src/engine/: camera.rs  debug_console.rs  debug_ui.rs  input.rs  mod.rs  player.rs  prototype.rs  ui.rs  world_generator.rs
src/engine/character/: mod.rs  npc.rs  player.rs
src/engine/item/: mod.rs  storage.rs
src/game/: characters.rs  items.rs  mod.rs
