[package]
name = "andromeda"
version = "0.0.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }
bevy-inspector-egui = "0.28.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8.5"
smart-default = "0.7.1"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
